numRecords and test across batch size